# iOS_bazel

./: BUILD.bazel  Info.plist  MODULE.bazel  Package.resolved  Package.swift  README.md  bazel-bin  bazel-out  bazel-swiftapp  bazel-testlogs
CoreModels/: BUILD.bazel  Product.swift  ProductData.swift
ScreenModule/: BUILD.bazel
ScreenModule/Sources/: Login.swift
Sources/: App.swift  ContentView.swift  User.swift  UserViewModel.swift  logic.swift
Tests/swiftappTests/: swiftappTests.swift
iOSApp.xcodeproj/: project.pbxproj
iOSApp.xcodeproj/project.xcworkspace/xcuserdata/navpreet.xcuserdatad/: UserInterfaceState.xcuserstate
iOSApp.xcodeproj/rules_xcodeproj/: generated.xcfilelist
iOSApp.xcodeproj/rules_xcodeproj/bazel/: Debug-swift_debug_settings.py  bazel_build.sh  xcodeproj.bazelrc
iOSApp.xcodeproj/xcshareddata/xcschemes/: Alamofire.xcscheme  CoreModels.xcscheme  Screens.xcscheme  iOSApp.xcscheme  lib.xcscheme
iOSApp.xcodeproj/xcuserdata/navpreet.xcuserdatad/xcschemes/: xcschememanagement.plist
